# scholar-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  REFACTOR_PLAN.md  docker-compose.yml  main.py  pyproject.toml
.github/scripts/: check_imports.py  check_syntax.py  smoke_test.py
.github/workflows/: ci.yml
docs/: COGNITIVE_ANCHOR.md  COGNITIVE_SPEC.md  EXAMPLE_OUTPUT.md  FRIDAY_API_REFERENCE.md  HANDOVER.md  HANDOVER_P1_IMPLEMENTATION.md  HANDOVER_PROMPT.md  P1_DEEP_READING_ENHANCEMENT.md  PHASE4_ARCHITECTURE_ANALYSIS.md  PROGRESS.md  REFERENCES.md  SCHOLAR_AGENT_V2_UPGRADE_PROMPT.md  STREAMING_DESIGN.md  TODO.md  USER_GUIDE.md  V2_UPGRADE_EXECUTION_PLAN.md
docs/archive/: AGENT_TRANSFORMATION_PLAN.md  AIME_ANALYSIS.md  ARCHITECTURE_UPGRADE_PLAN.md  ARCHITECTURE_V2_BLUEPRINT.md  EVAL_IMPL_PLAN.md  EXECUTION_PLAN.md  FULL_TEST_REPORT.md  GODEL_AGENT_PLAN.md  GODEL_AGENT_PLAN_V2.md  GODEL_AGENT_PLAN_V3.md  HANDOVER_PROMPT.md  (+16 more)
legacy/: CLAUDE.md  agent_loop.py  context_pipeline.py  prompts.py  state.py  tool_dispatch.py  tool_metadata.py  tool_schemas.py
llm/: __init__.py  client.py
poc/: RESULTS.md  cognitive_loop.py  run_test.py  test_paper.md
skills/: deai_rules_en.md
tools/: __init__.py  action_router.py  deai_engine.py  paper_parser.py  review_engine.py  stata_verify.py  write_engine.py
v1/: main.py
v2/: E2E_VERIFICATION_PLAN.md  EXECUTION_PLAN.md  FUNCTIONAL_WALKTHROUGH_PLAN.md  OPTIMIZATION_PROPOSAL.md  conftest.py  main.py  pyproject.toml  requirements.txt
(+744 files in other folders)
