[project]
name = "scholar-agent"
version = "5.14.0"
description = "Autonomous academic paper review agent with cognitive architecture"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
readme = "README.md"
dependencies = [
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["v2/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]
